--- a/src/components/PostCard/PostCard.css
+++ b/src/components/PostCard/PostCard.css
@@ -33,7 +33,7 @@
   color: red;
 }
 .border-icon-save {
-  color: rgb(0, 225, 255);
+  color: #3399ff;
 }
 .border-icon-comment {
   color: rgb(255, 238, 0);
