--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,8 +1,19 @@
 .headerTitle {
-    padding-left: 10px;
-    font-size: 30px;
-    font-family: cursive;
+  padding-left: 10px;
+  font-size: 30px;
+  font-family: cursive;
 }
 .dropdown-menu[data-bs-popper] {
-    left: -107px !important;
+  left: -107px !important;
+}
+.nav-link {
+  display: flex !important;
+}
+.userName {
+  margin-top: 8px;
+  margin-right: 6px;
+  margin-left: 8px;
+}
+.dropdown-toggle::after {
+  margin-top: 19px;
 }
